update(style): fixes navbar align

--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -18,6 +18,14 @@
   border-radius: $size-7
 .is-aligned
   align-items: center
+.is-justify-center
+  justify-content: center
+.is-justify-end
+  justify-content: flex-end
+.flex-1
+  flex: 1
+.flex-2
+  flex: 2
 // responsive navbar
 +mobile
   &.navbar-menu.is-active
